--- a/index.html
+++ b/index.html
@@ -5,9 +5,252 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Title</title>
 
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+            integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer"
+        />
         <link rel="stylesheet" href="/assets/css/style.css" />
-
-        <script src="/assets/js/script.js" defer></script>
+        <script src="assets/js/script.js" defer></script>
     </head>
-    <body></body>
+    <body>
+        <section id="header">
+            <nav class="desktop">
+                <ul>
+                    <li class="logo">
+                        <a href=""
+                            ><img
+                                src="assets/img/Placement Area.png"
+                                alt="LOGO"
+                        /></a>
+                    </li>
+                    <li><a href="">Fibula</a></li>
+                    <li><a href="">Mønter & Knapper</a></li>
+                    <li><a href="">Fundstatistik</a></li>
+                    <li class="login"><a href="">Køb Bogen</a></li>
+                </ul>
+            </nav>
+
+            <nav class="mobile">
+                <ul class="navbar">
+                    <li class="logo">
+                        <a href=""
+                            ><img
+                                src="assets/img/Placement Area.png"
+                                alt="LOGO"
+                        /></a>
+                    </li>
+                    <li class="menu">
+                        <button id="burgermenu">
+                            <i id="burger-icon" class="fa-solid fa-bars"></i>
+                        </button>
+                    </li>
+                </ul>
+
+                <section id="nav">
+                    <ul>
+                        <li><a href="">Fibula</a></li>
+                        <li><a href="">Mønter & Knapper</a></li>
+                        <li><a href="">Fundstatistik</a></li>
+                        <li><a href="">Køb Bogen</a></li>
+                    </ul>
+                </section>
+            </nav>
+
+            <article>
+                <h1>Detektorfund</h1>
+                <p>Fra marker i Sønderjylland</p>
+                <li><a href="">Køb bogen</a></li>
+            </article>
+        </section>
+
+        <section id="text">
+            <article>
+                <h2>Trefliget fibula</h2>
+                <p>
+                    En fibula (også kaldet bøjlenål) er et spænde, som ofte
+                    ligner en sikkerhedsnål, men som også kan have andre former.
+                    Fibulaer blev brugt fra bronze- til og med middelalder.
+                    Formålet med en fibula er at sammenfæste tekstiler, selv om
+                    de også har været brugt rent dekorativt.
+                </p>
+                <h3>Kronologisk oversigt</h3>
+                <p>
+                    Eftersom fibulaernes form ændrede sig over tid har man
+                    gennem typologiske studier kunnet lave en kronologisk
+                    oversigt, som i mange tilfælde kan bidrage med at datere
+                    gravfund.
+                </p>
+                <h3>Detektorafsøgning har givet ny viden</h3>
+                <p>
+                    Mange hundrede timers tålmodig detektorafsøg- ning har
+                    forøget mængden af metalfund fra oldtid og middelalder
+                    voldsomt. Adskillige genstande, som før kun kendtes i
+                    begrænset antal, har vist sig at være langt mere udbredte,
+                    både socialt og geografisk.
+                </p>
+                <h3>Fiblernes rolle i forskningen</h3>
+                <p>
+                    Interessen for fibler er herhjemme steget i takt med, at de
+                    i de seneste årtier er fundet i større og større antal. I
+                    Danmark har især en række forskere beskæftiget sig
+                    overordnet med nogle af fibeltyperne. Andre publikationer,
+                    der har behandlet fibler, drejer sig typisk om enkelte eller
+                    få fund. I den danske forskning er der en længere tradition
+                    for at beskæftige sig med emnet, af den enkle årsag at
+                    genstandstypen har været kendt længere tid og i større
+                    antal. Allerede i 1853 faldt fiblerne i arkæologernes
+                    søgelys. I nyere tid er stør- re sammenfattende arbejder
+                    blevet publiceret.
+                </p>
+            </article>
+        </section>
+
+        <section id="showroom">
+            <article>
+                <h2 class="header-h2">Mønt & knap</h2>
+                <p class="header-p">
+                    Alle mønter fra oldtid, vikingetid og middelalder (fra 1536
+                    og før) er danefæ. Det samme glæder større sølvmønter, fra
+                    efter 1536. Mønter i skattefund uanset alder (flere mønter
+                    nedlagt sammen).
+                </p>
+                <img src="assets/img/coins/coin1.png" alt="" />
+                <p id="text1">Byzantinsk, 936.</p>
+                <img src="assets/img/coins/coin2.png" alt="" />
+                <p id="text2">1-skilling, 1771.</p>
+                <img src="assets/img/coins/coin3.png" alt="" />
+                <p id="text3">12 skilling, 1721.</p>
+                <img src="assets/img/coins/coin4.png" alt="" />
+                <p id="text4">Byzantinsk, 936.</p>
+                <img src="assets/img/coins/coin5.png" alt="" />
+                <p id="text5">1-skilling, 1771.</p>
+                <img src="assets/img/coins/coin6.png" alt="" />
+                <p id="text6">12 skilling, 1721.</p>
+            </article>
+        </section>
+
+        <section id="tabel">
+            <article>
+                <h2>Fundstatestik</h2>
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Antal</th>
+                            <th>Årstal</th>
+                            <th>Fundtype</th>
+                            <th>Danefæ</th>
+                            <th>Materiale</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>169</td>
+                            <td>2019</td>
+                            <td>Dragttilbøhør</td>
+                            <td><i class="fa-solid fa-check"></i></td>
+                            <td>Kobberlegering</td>
+                        </tr>
+                        <tr>
+                            <td>25</td>
+                            <td>2019</td>
+                            <td>Redskab, værktøj</td>
+                            <td></td>
+                            <td>Jern</td>
+                        </tr>
+                        <tr>
+                            <td>141</td>
+                            <td>2020</td>
+                            <td>Mønt</td>
+                            <td><i class="fa-solid fa-check"></i></td>
+                            <td>Sølv</td>
+                        </tr>
+                        <tr>
+                            <td>1165</td>
+                            <td>2021</td>
+                            <td>Mønt</td>
+                            <td></td>
+                            <td>Kobberlegering</td>
+                        </tr>
+                        <tr>
+                            <td>26</td>
+                            <td>2021</td>
+                            <td>Fibula</td>
+                            <td><i class="fa-solid fa-check"></i></td>
+                            <td>Kobberlegering</td>
+                        </tr>
+                        <tr>
+                            <td>2</td>
+                            <td>2022</td>
+                            <td>Våben, militaria</td>
+                            <td><i class="fa-solid fa-check"></i></td>
+                            <td>Jern</td>
+                        </tr>
+                        <tr>
+                            <td>12</td>
+                            <td>2022</td>
+                            <td>Ubestemt</td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </article>
+        </section>
+
+        <section id="book-cover">
+            <section class="container">
+                <article>
+                    <h2>Bogen om detektorfund</h2>
+                    <p>
+                        Endelig kom den fine lille bog om et udvalg af museernes
+                        frivillige detektorfolk, der udfører et stort arbejde
+                        til gavn for den fælles fortid.
+                    </p>
+                    <li><a href="">Køb</a></li>
+                </article>
+                <img src="assets/img/Placement Area.png" alt="" />
+            </section>
+        </section>
+
+        <section id="news">
+            <article>
+                <h2>Nyhedsbrev</h2>
+                <p>
+                    Tilmeld dig vores nyhedsbrev og modtag løbende info om nye
+                    rund.
+                </p>
+                <form action="">
+                    <input type="email" size="35" placeholder="Din email" />
+                    <button type="submit">Tilmeld</button>
+                </form>
+            </article>
+        </section>
+
+        <footer>
+            <section class="footer">
+                <h3>&copy; 2022 Detektorfund</h3>
+
+                <ul>
+                    <li>
+                        <a href=""><i class="fa-brands fa-facebook-f"></i></a>
+                    </li>
+                    <li>
+                        <a href=""><i class="fa-brands fa-twitter"></i></a>
+                    </li>
+                    <li>
+                        <a href=""><i class="fa-brands fa-linkedin-in"></i></a>
+                    </li>
+                    <li>
+                        <a href=""><i class="fa-brands fa-youtube"></i></a>
+                    </li>
+                    <li>
+                        <a href=""><i class="fa-solid fa-phone"></i></a>
+                    </li>
+                </ul>
+            </section>
+        </footer>
+    </body>
 </html>
