--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
             crossorigin="anonymous"
             referrerpolicy="no-referrer"
         />
+
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+            rel="stylesheet"
+        />
         <link rel="stylesheet" href="/assets/css/style.css" />
         <script src="assets/js/script.js" defer></script>
     </head>
@@ -26,9 +33,9 @@
                                 alt="LOGO"
                         /></a>
                     </li>
-                    <li><a href="">Fibula</a></li>
-                    <li><a href="">Mønter & Knapper</a></li>
-                    <li><a href="">Fundstatistik</a></li>
+                    <li class="nav-links"><a href="">Fibula</a></li>
+                    <li class="nav-links"><a href="">Mønter & Knapper</a></li>
+                    <li class="nav-links"><a href="">Fundstatistik</a></li>
                     <li class="login"><a href="">Køb Bogen</a></li>
                 </ul>
             </nav>
